--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,9 +9,9 @@
     <LinearLayout
         android:layout_width="290dp"
         android:layout_height="253dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="236dp"
         android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -27,9 +27,9 @@
             android:id="@+id/editTextPhone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:autofillHints=""
             android:ems="10"
-            android:inputType="phone"
-            android:autofillHints="" />
+            android:inputType="phone" />
 
         <Button
             android:id="@+id/button4"
