--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,9 +4,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/back_picture"
     tools:context=".LoginActivity">
 
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="422dp"
+        android:layout_height="78dp"
+        android:backgroundTint="@color/blue_dark"
+        android:text="ОДС"
+        android:textColor="#FFFDFD"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="420dp"
+        android:layout_height="73dp"
+        android:backgroundTint="@color/blue_dark"
+        android:textColor="#FFFDFD"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.555"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/loginActivityCloseButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/blue_dark"
+        android:clickable="true"
+        android:onClick="close"
+        app:backgroundTint="@color/blue_dark"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.873"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.087"
+        app:rippleColor="#FFFFFF"
+        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="290dp"
         android:layout_height="253dp"
         android:orientation="vertical"
@@ -19,8 +64,12 @@
             android:id="@+id/loginInfoText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Введите номер телефона в формате +7"
-            android:textSize="20sp"
+            android:fontFamily="sans-serif"
+            android:text="Введите номер телефона в формате +7**********"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="#031245"
+            android:textSize="24sp"
             android:textStyle="normal" />
 
         <EditText
@@ -29,14 +78,17 @@
             android:layout_height="wrap_content"
             android:autofillHints=""
             android:ems="10"
-            android:inputType="phone" />
+            android:inputType="phone"
+            android:textColor="#01052C" />
 
         <Button
             android:id="@+id/button4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/blue_light"
             android:onClick="click"
-            android:text="@string/loginButton" />
+            android:text="@string/loginButton"
+            android:textSize="16sp" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
