--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -9,7 +9,7 @@
 
     <Button
         android:id="@+id/button7"
-        android:layout_width="440dp"
+        android:layout_width="426dp"
         android:layout_height="78dp"
         android:backgroundTint="@color/blue_dark"
         android:text="ОДС"
@@ -19,106 +19,103 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button8"
-        android:layout_width="420dp"
-        android:layout_height="73dp"
-        android:backgroundTint="@color/blue_dark"
-        android:textColor="#FFFDFD"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
     <LinearLayout
-        android:id="@+id/linearLayout4"
-        android:layout_width="334dp"
-        android:layout_height="305dp"
+        android:id="@+id/linearLayout5"
+        android:layout_width="346dp"
+        android:layout_height="663dp"
+        android:layout_marginTop="20dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/addEventButton"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/button7"
+        app:layout_constraintVertical_bias="0.043">
 
         <EditText
             android:id="@+id/eventTitlePlainText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="#162378"
-            android:drawableTint="#2196F3"
             android:ems="10"
-            android:foregroundTint="#15658A"
             android:hint="Введите название мероприятия"
             android:inputType="textPersonName"
             android:minHeight="48dp" />
 
         <EditText
-            android:id="@+id/eventDescriptionPlainText"
+            android:id="@+id/eventPlacePlainText"
             android:layout_width="match_parent"
-            android:layout_height="75dp"
-            android:backgroundTint="#162378"
-            android:drawableTint="#2196F3"
+            android:layout_height="wrap_content"
             android:ems="10"
-            android:foregroundTint="#15658A"
-            android:hint="Введите описание мероприятия"
+            android:hint="Место проведения"
             android:inputType="textPersonName"
-            android:minHeight="48dp"
-            android:textAlignment="viewStart" />
+            android:minHeight="48dp" />
 
         <EditText
-            android:id="@+id/eventPlaceLatPlainText"
+            android:id="@+id/latEditTextNumberDecimal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="#162378"
-            android:drawableTint="#2196F3"
             android:ems="10"
-            android:foregroundTint="#15658A"
-            android:hint="Введите координату широты"
-            android:inputType="textPersonName"
-            android:minHeight="48dp"
-            android:textAlignment="viewStart" />
+            android:hint="Широта"
+            android:inputType="numberDecimal" />
 
         <EditText
-            android:id="@+id/eventPlaceLngPlainText"
+            android:id="@+id/lngEditTextNumberDecimal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="#162378"
-            android:drawableTint="#2196F3"
             android:ems="10"
-            android:foregroundTint="#15658A"
-            android:hint="Введите координату долготы"
-            android:inputType="textPersonName"
-            android:minHeight="48dp"
-            android:textAlignment="viewStart" />
+            android:hint="Долгота"
+            android:inputType="numberDecimal" />
 
-        <Button
-            android:id="@+id/addEventButton"
+        <DatePicker
+            android:id="@+id/datePicker"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/blue_light"
-            android:fontFamily="casual"
-            android:onClick="addEvent"
-            android:text="Добавить мероприятие"
-            android:textAllCaps="true"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            android:layout_height="238dp"
+            android:layout_below="@+id/button"
+            android:layout_centerHorizontal="true"
+            android:background="#BDF2FF"
+            android:backgroundTint="#F3F6F8"
+            android:calendarTextColor="@color/purple_700"
+            android:datePickerMode="calendar"
+            android:dayOfWeekBackground="@color/blue_dark"
+            android:foregroundTint="#D4F1FF"
+            android:foregroundTintMode="screen"
+            android:headerBackground="#A9CCE8"
+            android:headerDayOfMonthTextAppearance="@style/TextAppearance.AppCompat.Small"
+            android:headerMonthTextAppearance="@style/TextAppearance.AppCompat.Small"
+            android:headerYearTextAppearance="@style/TextAppearance.AppCompat.Small"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="463dp" />
+
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/closeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/blue_dark"
         android:clickable="true"
         android:onClick="close"
-        app:backgroundTint="@color/blue_dark"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.876"
+        app:layout_constraintEnd_toEndOf="@+id/button7"
+        app:layout_constraintHorizontal_bias="0.739"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.091"
+        app:layout_constraintTop_toTopOf="@+id/button7"
         app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+
+    <Button
+        android:id="@+id/addEventButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/blue_light"
+        android:onClick="addEvent"
+        android:text="Добавить мероприятие"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+      />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
