--- a/app/src/main/res/layout/activity_message_add_event.xml
+++ b/app/src/main/res/layout/activity_message_add_event.xml
@@ -75,5 +75,6 @@
         app:layout_constraintBottom_toTopOf="@+id/button8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addNewEventButton" />
+        app:layout_constraintTop_toBottomOf="@+id/addNewEventButton"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
