--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -21,16 +21,16 @@
 
     <LinearLayout
         android:id="@+id/linearLayout5"
-        android:layout_width="346dp"
-        android:layout_height="663dp"
+        android:layout_width="336dp"
+        android:layout_height="531dp"
         android:layout_marginTop="20dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/addEventButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button7"
-        app:layout_constraintVertical_bias="0.043">
+        app:layout_constraintVertical_bias="0.351">
 
         <EditText
             android:id="@+id/eventTitlePlainText"
@@ -44,7 +44,7 @@
         <EditText
             android:id="@+id/eventPlacePlainText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
             android:ems="10"
             android:hint="Место проведения"
             android:inputType="textPersonName"
@@ -56,7 +56,8 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="Широта"
-            android:inputType="numberDecimal" />
+            android:inputType="numberDecimal"
+            android:shadowColor="@color/purple_700" />
 
         <EditText
             android:id="@+id/lngEditTextNumberDecimal"
@@ -68,40 +69,51 @@
 
         <DatePicker
             android:id="@+id/datePicker"
+            style="@android:style/Widget.DatePicker"
             android:layout_width="match_parent"
             android:layout_height="238dp"
             android:layout_below="@+id/button"
             android:layout_centerHorizontal="true"
-            android:background="#BDF2FF"
+            android:layout_gravity="center_horizontal"
+            android:addStatesFromChildren="true"
+            android:background="@color/blue_light"
             android:backgroundTint="#F3F6F8"
             android:calendarTextColor="@color/purple_700"
-            android:datePickerMode="calendar"
+            android:datePickerMode="spinner"
             android:dayOfWeekBackground="@color/blue_dark"
+            android:dayOfWeekTextAppearance="@style/TextAppearance.AppCompat.Display1"
             android:foregroundTint="#D4F1FF"
             android:foregroundTintMode="screen"
             android:headerBackground="#A9CCE8"
             android:headerDayOfMonthTextAppearance="@style/TextAppearance.AppCompat.Small"
             android:headerMonthTextAppearance="@style/TextAppearance.AppCompat.Small"
             android:headerYearTextAppearance="@style/TextAppearance.AppCompat.Small"
+            android:soundEffectsEnabled="true"
+            android:spinnersShown="true"
+            android:splitMotionEvents="true"
+            android:visibility="visible"
+            android:yearListItemTextAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:yearListSelectorColor="@color/blue_light"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             tools:layout_editor_absoluteY="463dp" />
 
     </LinearLayout>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/closeButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:backgroundTint="@color/blue_dark"
+    <Button
+        android:id="@+id/imageExitButton"
+        android:layout_width="64dp"
+        android:layout_height="61dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/ic_close_black_24dp"
+        android:backgroundTint="@color/white"
         android:clickable="true"
-        android:onClick="close"
-        app:layout_constraintEnd_toEndOf="@+id/button7"
-        app:layout_constraintHorizontal_bias="0.739"
-        app:layout_constraintStart_toStartOf="parent"
+        android:onClick="exitApp"
+        app:layout_constraintBottom_toBottomOf="@+id/button7"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/button7"
-        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+        app:layout_constraintVertical_bias="0.47"
+        tools:ignore="OnClick" />
 
     <Button
         android:id="@+id/addEventButton"
@@ -115,7 +127,20 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-      />
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/imageMainHomeButton"
+        android:layout_width="75dp"
+        android:layout_height="71dp"
+        android:layout_marginStart="16dp"
+        android:background="@drawable/ic_home_black_24dp__2_"
+        android:backgroundTint="@color/white"
+        android:clickable="true"
+        android:onClick="mainHome"
+        app:layout_constraintBottom_toBottomOf="@+id/button7"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/button7"
+        app:layout_constraintVertical_bias="0.625" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
