--- a/app/src/main/res/layout/activity_find.xml
+++ b/app/src/main/res/layout/activity_find.xml
@@ -19,19 +19,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/findActivityCloseButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:backgroundTint="@color/blue_dark"
+    <Button
+        android:id="@+id/imageExitButton"
+        android:layout_width="64dp"
+        android:layout_height="61dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/ic_close_black_24dp"
+        android:backgroundTint="@color/white"
         android:clickable="true"
-        android:onClick="close"
+        android:onClick="exitApp"
+        app:layout_constraintBottom_toBottomOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.853"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+        app:layout_constraintTop_toTopOf="@+id/button"
+        app:layout_constraintVertical_bias="0.47000003"
+        tools:ignore="OnClick" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -117,5 +118,19 @@
             android:progressTint="#105A95" />
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/imageMainHomeButton"
+        android:layout_width="70dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="16dp"
+        android:background="@drawable/ic_home_black_24dp__2_"
+        android:backgroundTint="@color/white"
+        android:clickable="true"
+        android:onClick="mainHome"
+        app:layout_constraintBottom_toBottomOf="@+id/button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/button"
+        app:layout_constraintVertical_bias="0.62" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
