--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,6 +7,21 @@
     android:background="@drawable/back_picture"
     tools:context=".LoginActivity">
 
+    <TextView
+        android:id="@+id/loginInfoText2"
+        android:layout_width="324dp"
+        android:layout_height="77dp"
+        android:fontFamily="sans-serif"
+        android:text="Введите ваш номер телефона (12 сиволов)"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="#031245"
+        android:textSize="22sp"
+        android:textStyle="normal"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <Button
         android:id="@+id/button6"
         android:layout_width="422dp"
@@ -16,6 +31,7 @@
         android:textColor="#FFFDFD"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.363"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,43 +49,44 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/loginActivityCloseButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/blue_dark"
+    <Button
+        android:id="@+id/imageExitButton"
+        android:layout_width="64dp"
+        android:layout_height="61dp"
+        android:background="@drawable/ic_close_black_24dp"
+        android:backgroundTint="@color/white"
         android:clickable="true"
-        android:onClick="close"
-        app:backgroundTint="@color/blue_dark"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        android:onClick="exitApp"
+        app:layout_constraintBottom_toBottomOf="@+id/button6"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.873"
+        app:layout_constraintHorizontal_bias="0.954"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.087"
-        app:rippleColor="#FFFFFF"
-        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+        app:layout_constraintVertical_bias="0.551"
+        tools:ignore="OnClick" />
 
     <LinearLayout
         android:id="@+id/linearLayout2"
-        android:layout_width="290dp"
-        android:layout_height="253dp"
+        android:layout_width="326dp"
+        android:layout_height="300dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.517"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.612">
 
         <TextView
             android:id="@+id/loginInfoText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="63dp"
             android:fontFamily="sans-serif"
-            android:text="Введите номер телефона в формате +7**********"
+            android:text=" Формат: +7 (9ХХ) ХХХ-ХХ-ХХ"
             android:textAlignment="center"
             android:textAllCaps="true"
             android:textColor="#031245"
-            android:textSize="24sp"
+            android:textSize="22sp"
             android:textStyle="normal" />
 
         <EditText
@@ -88,7 +105,22 @@
             android:backgroundTint="@color/blue_light"
             android:onClick="click"
             android:text="@string/loginButton"
-            android:textSize="16sp" />
+            android:textSize="22sp" />
+
     </LinearLayout>
+
+    <Button
+        android:id="@+id/imageMainHomeButton"
+        android:layout_width="62dp"
+        android:layout_height="62dp"
+        android:layout_marginStart="16dp"
+        android:background="@drawable/ic_home_black_24dp__2_"
+        android:backgroundTint="@color/white"
+        android:clickable="true"
+        android:onClick="mainHome"
+        app:layout_constraintBottom_toBottomOf="@+id/button6"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/button6"
+        app:layout_constraintVertical_bias="0.551" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
