--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -22,8 +22,9 @@
     <LinearLayout
         android:id="@+id/linearLayout5"
         android:layout_width="336dp"
-        android:layout_height="531dp"
+        android:layout_height="420dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/addEventButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,6 +32,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button7"
         app:layout_constraintVertical_bias="0.351">
+
+
 
         <EditText
             android:id="@+id/eventTitlePlainText"
@@ -46,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:ems="10"
-            android:hint="Место проведения"
+            android:hint="Введите описание"
             android:inputType="textPersonName"
             android:minHeight="48dp" />
 
@@ -55,7 +58,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="Широта"
+            android:hint="Введите координату широты"
             android:inputType="numberDecimal"
             android:shadowColor="@color/purple_700" />
 
@@ -64,14 +67,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="Долгота"
-            android:inputType="numberDecimal" />
+            android:hint="Введите координату долготы"
+            android:inputType="numberDecimal"
+            android:rotationX="4" />
+
+
+        <TimePicker
+            android:id="@+id/simpleTimePicker"
+            android:layout_width="match_parent"
+            android:layout_height="116dp"
+            android:layout_marginTop="10dp"
+            android:background="#F2F0F0F8"
+            android:padding="20dp"
+            android:timePickerMode="spinner" />
 
         <DatePicker
             android:id="@+id/datePicker"
             style="@android:style/Widget.DatePicker"
             android:layout_width="match_parent"
-            android:layout_height="238dp"
+            android:layout_height="149dp"
+            android:layout_marginTop="10dp"
             android:layout_below="@+id/button"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center_horizontal"
