--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -21,18 +21,17 @@
 
     <LinearLayout
         android:id="@+id/linearLayout5"
-        android:layout_width="336dp"
-        android:layout_height="420dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="344dp"
+        android:layout_height="510dp"
+        android:layout_marginTop="2dp"
         android:layout_marginBottom="10dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/addEventButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintHorizontal_bias="0.54"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button7"
-        app:layout_constraintVertical_bias="0.351">
-
+        app:layout_constraintVertical_bias="0.060000002">
 
 
         <EditText
@@ -86,10 +85,10 @@
             style="@android:style/Widget.DatePicker"
             android:layout_width="match_parent"
             android:layout_height="149dp"
-            android:layout_marginTop="10dp"
             android:layout_below="@+id/button"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
             android:addStatesFromChildren="true"
             android:background="@color/blue_light"
             android:backgroundTint="#F3F6F8"
