корректная обработка ошибок - с помощью диалога

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue_light">#A9CCE8</color>
     <color name="blue_dark">#FF152B59</color>
+    <color name="red">#B60A0A</color>
 </resources>
