--- a/app/src/main/res/layout/activity_find.xml
+++ b/app/src/main/res/layout/activity_find.xml
@@ -77,12 +77,14 @@
 
     <ListView
         android:id="@+id/list"
-        android:layout_width="349dp"
-        android:layout_height="401dp"
+        android:layout_width="364dp"
+        android:layout_height="374dp"
         android:layout_marginTop="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider3" />
+        app:layout_constraintTop_toBottomOf="@+id/divider3"
+        app:layout_constraintVertical_bias="0.515" />
 
     <LinearLayout
         android:layout_width="306dp"
