--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -21,17 +21,19 @@
 
     <LinearLayout
         android:id="@+id/linearLayout5"
-        android:layout_width="344dp"
-        android:layout_height="510dp"
+        android:layout_width="306dp"
+        android:layout_height="450dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="2dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="10dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/addEventButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.54"
+        app:layout_constraintHorizontal_bias="0.55"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button7"
-        app:layout_constraintVertical_bias="0.060000002">
+        app:layout_constraintVertical_bias="0.51">
 
 
         <EditText
@@ -75,22 +77,26 @@
             android:id="@+id/dateText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:clickable="false"
             android:cursorVisible="false"
+            android:ems="10"
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:hint="Введите дату"
             android:shadowColor="@color/purple_700" />
 
-        <TimePicker
-            android:id="@+id/simpleTimePicker"
+        <EditText
+            android:id="@+id/timeText"
             android:layout_width="match_parent"
-            android:layout_height="116dp"
-            android:layout_marginTop="10dp"
-            android:background="#F2F0F0F8"
-            android:padding="20dp"
-            android:timePickerMode="spinner" />
+            android:layout_height="wrap_content"
+            android:clickable="false"
+            android:cursorVisible="false"
+            android:ems="10"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:hint="Введите время"
+            android:onClick="onclicktime" />
+
 
     </LinearLayout>
 
