--- a/app/src/main/res/layout/activity_find_studio.xml
+++ b/app/src/main/res/layout/activity_find_studio.xml
@@ -31,8 +31,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/button"
-        app:layout_constraintVertical_bias="0.47000003"
-        tools:ignore="OnClick" />
+        app:layout_constraintVertical_bias="0.47000003" />
 
     <View
         android:id="@+id/divider3"
